--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,29 @@
 STORE_CORS=http://localhost:8000,https://docs.medusajs.com
 ADMIN_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
 AUTH_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
-REDIS_URL=redis://localhost:6379
+REDIS_URL=
 JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
 DATABASE_URL=
-DB_NAME=medusa-v2
-POSTGRES_URL=
+
+MEDUSA_ADMIN_EMAIL=admin@yourmail.com
+MEDUSA_ADMIN_PASSWORD=supersecret
+
+STRIPE_API_KEY=
+STRIPE_WEBHOOK_SECRET=
+
+SENDGRID_API_KEY=
+SENDGRID_FROM=
+
+# MEDUSA_WORKER_MODE=shared # e.g. shared, worker, server
+# MEDUSA_DISABLE_ADMIN=false
+
+# MinIO Storage Configuration (Optional - falls back to local storage)
+# MINIO_ENDPOINT=your-minio-endpoint
+# MINIO_ACCESS_KEY=your-access-key
+# MINIO_SECRET_KEY=your-secret-key
+# MINIO_BUCKET=custom-bucket-name # Optional - defaults to 'medusa-media'
+
+# Meilisearch Configuration (Optional)
+# MEILISEARCH_HOST=your-meilisearch-host # e.g. http://localhost:7700
+# MEILISEARCH_API_KEY=your-master-key
