--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "medusa"
   ],
   "scripts": {
+    "db:init": "init-db",
     "build": "medusa build",
+    "postbuild": "cp -r bootstrap .medusa/server/bootstrap",
     "seed": "medusa exec ./src/scripts/seed.ts",
-    "start": "medusa start",
+    "start": "cd .medusa/server && medusa start",
     "dev": "medusa develop",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit",
@@ -31,6 +33,9 @@
     "@mikro-orm/migrations": "5.9.7",
     "@mikro-orm/postgresql": "5.9.7",
     "awilix": "^8.0.1",
+    "bootstrap": "file:./bootstrap",
+    "medusa-file-minio": "^1.3.2",
+    "medusa-plugin-meilisearch": "^2.0.11",
     "pg": "^8.13.0"
   },
   "devDependencies": {
@@ -40,6 +45,7 @@
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.13",
     "@types/node": "^20.0.0",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.2.25",
     "jest": "^29.7.0",
@@ -52,5 +58,6 @@
   },
   "engines": {
     "node": ">=20"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
