--- a/.env.template
+++ b/.env.template
@@ -12,8 +12,8 @@ MEDUSA_ADMIN_PASSWORD=supersecret
 STRIPE_API_KEY=
 STRIPE_WEBHOOK_SECRET=
 
-SENDGRID_API_KEY=
-SENDGRID_FROM=
+RESEND_API_KEY=
+RESEND_FROM_EMAIL=
 
 # MEDUSA_WORKER_MODE=shared # e.g. shared, worker, server
 # MEDUSA_DISABLE_ADMIN=false
