--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "@mikro-orm/knex": "5.9.7",
     "@mikro-orm/migrations": "5.9.7",
     "@mikro-orm/postgresql": "5.9.7",
+    "@react-email/components": "^0.0.32",
     "@rokmohar/medusa-plugin-meilisearch": "^0.2.1",
     "awilix": "^8.0.1",
     "bootstrap": "file:./bootstrap",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "resend": "^4.0.1"
   },
   "devDependencies": {
     "@medusajs/test-utils": "2.2.0",
